--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             
             // NOTE: Replace this with your actual API key
             // This is for local development only and should not be made public
-            apiKey: "" 
+            apiKey: "AIzaSyBkQPSHYZhz04dym3v3w7Yefuyc0kdwMlc" 
         };
 
         function showScreen(screenId) {
