--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adaptive Learning Platform</title>
+    <title>GENESIS AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;500;700&display=swap');
@@ -174,15 +174,41 @@
         }
     </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+<body class="bg-gray-100 flex flex-col items-center justify-center min-h-screen">
     <div class="container p-6">
         <!-- Main Content Area -->
         <div id="main-content" class="text-center">
 
-            <!-- Welcome/Input Screen -->
-            <div id="input-screen" class="fade-in">
+            <!-- Login/Signup Screen -->
+            <div id="login-screen" class="fade-in">
                 <div class="card p-8 md:p-12 relative overflow-hidden">
-                    <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">Welcome to LearnAI</h1>
+                    <h2 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">JOIN THE CREW!</h2>
+                    <p class="text-lg text-gray-600 mb-8">Log in or sign up to save your progress and set sail.</p>
+                    
+                    <input type="email" id="login-email" class="w-full p-4 text-gray-700 bg-gray-50 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 mb-4" placeholder="Email">
+                    <input type="password" id="login-password" class="w-full p-4 text-gray-700 bg-gray-50 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 mb-4" placeholder="Password">
+
+                    <div id="login-error-message" class="text-red-500 text-sm mb-4 hidden"></div>
+                    
+                    <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
+                        <button id="login-btn" class="w-full bg-blue-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:bg-blue-700 transition transform hover:scale-105">
+                            Log In
+                        </button>
+                        <button id="signup-btn" class="w-full bg-green-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:bg-green-700 transition transform hover:scale-105">
+                            Sign Up
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Welcome/Input Screen -->
+            <div id="welcome-screen" class="hidden fade-in">
+                <div class="card p-8 md:p-12 relative overflow-hidden">
+                    <div class="flex justify-between items-center mb-4">
+                        <h1 class="text-4xl md:text-5xl font-bold text-gray-800">Welcome</h1>
+                        <button id="logout-btn" class="text-gray-600 hover:text-red-500 transition">Log Out</button>
+                    </div>
+                    <p class="text-lg text-gray-600 mb-2">Logged in as: <span id="user-id-display" class="font-semibold text-blue-600"></span></p>
                     <p class="text-lg text-gray-600 mb-8">Your personalized, adaptive learning companion. Upload your material below to get started.</p>
                     <input type="file" id="material-upload" accept=".txt,.md" class="w-full text-gray-700 bg-gray-50 border border-gray-300 rounded-xl p-4 mb-4">
                     <p class="text-sm text-gray-500 mb-4">Or paste your course material here:</p>
@@ -196,7 +222,10 @@
             <!-- Topic Selection Screen -->
             <div id="topic-screen" class="hidden fade-in">
                 <div class="card p-8 md:p-12 relative">
-                    <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">What do you want to learn about?</h2>
+                    <div class="flex justify-between items-center mb-4">
+                        <h2 class="text-3xl md:text-4xl font-bold text-gray-800">What to learn about?</h2>
+                        <button id="logout-btn-topic" class="text-gray-600 hover:text-red-500 transition">Log Out</button>
+                    </div>
                     <p class="text-lg text-gray-600 mb-4">The AI has analyzed your material. Enter a specific topic to get a detailed explanation and a tailored quiz.</p>
                     <div class="flex flex-col md:flex-row items-center md:space-x-4 mb-6">
                         <label for="learning-speed" class="text-gray-700 text-sm font-medium whitespace-nowrap">My learning speed is:</label>
@@ -235,21 +264,18 @@
             <!-- Explanation Screen with Chatbot -->
             <div id="explanation-screen" class="hidden fade-in">
                 <div class="card p-8 md:p-12 mb-6 text-left flex flex-col lg:flex-row lg:space-x-8">
-                    <div class="flex justify-end w-full mb-4 lg:hidden">
+                    <div class="flex justify-between items-center w-full mb-4">
+                        <h2 class="text-2xl md:text-3xl font-bold text-gray-800">Topic Summary</h2>
                         <button id="logout-btn-explanation" class="text-gray-600 hover:text-red-500 transition">Log Out</button>
                     </div>
                     <!-- Left side: Explanation -->
                     <div class="lg:w-2/3 mb-8 lg:mb-0">
-                        <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4">Topic Summary</h2>
                         <div id="explanation-text" class="text-base text-gray-700 leading-relaxed max-h-[400px] overflow-y-auto mb-6 p-4 bg-gray-50 rounded-lg">
                             <!-- Explanation will be populated here by JS -->
                         </div>
                     </div>
                     <!-- Right side: Chatbot -->
                     <div class="lg:w-1/3 flex flex-col">
-                        <div class="hidden lg:flex justify-end w-full mb-4">
-                            <button id="logout-btn-explanation-lg" class="text-gray-600 hover:text-red-500 transition">Log Out</button>
-                        </div>
                         <h3 class="text-xl font-bold text-gray-800 mb-4">AI Tutor</h3>
                         <div id="chat-window" class="flex-grow mb-4"></div>
                         <div class="flex">
@@ -266,9 +292,6 @@
             <!-- Game Screen -->
             <div id="game-screen" class="hidden fade-in">
                 <div class="card p-8 md:p-12 mb-6 relative">
-                    <div class="flex justify-end w-full mb-4">
-                        <button id="logout-btn-game" class="text-gray-600 hover:text-red-500 transition">Log Out</button>
-                    </div>
                     <div class="flex justify-between items-center mb-4">
                         <div class="text-gray-600 text-sm">
                             <span id="difficulty-text" class="font-medium text-blue-600 uppercase"></span>
@@ -279,6 +302,7 @@
                     <div id="options-container" class="grid grid-cols-1 md:grid-cols-2 gap-4">
                         <!-- Options will be populated here by JS -->
                     </div>
+                    <button id="logout-btn-game" class="absolute top-4 right-4 text-gray-600 hover:text-red-500 transition">Log Out</button>
                 </div>
                 <button id="next-btn" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:bg-blue-700 transition transform hover:scale-105 hidden">
                     Next Question
@@ -288,10 +312,10 @@
             <!-- Quiz Results Screen -->
             <div id="quiz-results-screen" class="hidden fade-in">
                 <div class="card p-8 md:p-12 relative overflow-hidden">
-                    <div class="flex justify-end w-full mb-4">
+                    <div class="flex justify-between items-center w-full mb-4">
+                        <h2 class="text-3xl md:text-4xl font-bold text-gray-800">Quiz Results</h2>
                         <button id="logout-btn-results" class="text-gray-600 hover:text-red-500 transition">Log Out</button>
                     </div>
-                    <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Quiz Results</h2>
                     <div class="flex flex-col items-center justify-center mb-6">
                         <div id="final-score-text" class="text-5xl font-extrabold text-blue-600 mr-4"></div>
                         <canvas id="score-chart" width="400" height="200" class="mt-4"></canvas>
